# talos

./: .gitignore  BUILD.md  Cargo.toml  README.md  WRITEUP.md
benches/: tokps.rs
src/: eval.rs  kv_cache.rs  lib.rs  main.rs  sample.rs  tokenizer.rs
src/gguf/: dtype.rs  mod.rs  reader.rs
src/math/: matmul.rs  mod.rs  ops.rs  quant.rs
src/math/metal/: kernels.metal  mod.rs
src/model/: config.rs  llama.rs  mod.rs  weights.rs
tests/: forward_gpu.rs  gqa.rs  parity.rs  quant.rs
tests/fixtures/: tiny32_logits.json  tiny_logits.json
