[package]
name = "talos"
version = "0.1.0"
edition = "2021"
description = "A minimal LLM inference engine in Rust — runs GGUF models forged by Hephaistos."

[lib]
name = "talos"
path = "src/lib.rs"

[[bin]]
name = "talos"
path = "src/main.rs"

[dependencies]
anyhow = "1"
bytemuck = "1"
rand = "0.8"
half = "2"
wide = "0.7"
metal = { version = "0.29", optional = true }

# Native-only: wasm has no filesystem (memmap2) and no threads (rayon).
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
memmap2 = "0.9"
rayon = "1"

[features]
# M7: run the matvec hot path on the Apple GPU. Off by default so CPU builds
# (and CI without a GPU) are untouched.
metal = ["dep:metal"]

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "tokps"
harness = false
